--- a/inventory_app/templates/app/inventory.html
+++ b/inventory_app/templates/app/inventory.html
@@ -1,6 +1,6 @@
 <!-- templates/inventory_app/inventory.html -->
 
-{% extends 'inventory_app/base.html' %}
+{% extends 'app/base.html' %}
 
 {% block content %}
 <h2>Inventory</h2>
