--- a/inventory_app/templates/app/dashboard.html
+++ b/inventory_app/templates/app/dashboard.html
@@ -1,6 +1,6 @@
 <!-- templates/inventory_app/dashboard.html -->
 
-{% extends 'inventory_app/base.html' %}
+{% extends 'app/base.html' %}
 
 {% block content %}
 <h2>Dashboard</h2>
