--- a/inventory_app/templates/app/register.html
+++ b/inventory_app/templates/app/register.html
@@ -1,6 +1,6 @@
 <!-- templates/inventory_app/register.html -->
 
-{% extends 'inventory_app/base.html' %}
+{% extends 'app/base.html' %}
 
 {% block content %}
 <h2>Register</h2>
