--- a/inventory_app/templates/app/login.html
+++ b/inventory_app/templates/app/login.html
@@ -1,6 +1,6 @@
 <!-- templates/inventory_app/login.html -->
 
-{% extends 'app/base.html' %}
+{% extends 'inventory_app/base.html' %}
 
 {% block content %}
 <h2>Login</h2>
